--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@cucumber/cucumber": "^11.3.0",
     "@playwright/test": "^1.53.2",
-    "@types/node": "^24.0.11"
+    "@types/node": "^24.0.11",
+    "cucumber-html-reporter": "^7.2.0"
   }
 }
